# rowan

./: README.md
prebuilt/cloud/alexa/avs-device-sdk-master/: CMakeLists.txt  avs-1.0.0-r0.aarch64.rpm  avs_rpm_unpack.sh
prebuilt/cloud/ztk-adaptor/: CMakeLists.txt  rpm2cpio_rpm.sh
prebuilt/cloud/ztk-adaptor/lib/: adaptor-1.0-r0.cortexa7hf_neon_vfpv4.rpm  adaptor-dev-1.0-r0.cortexa7hf_neon_vfpv4.rpm
prebuilt/cloud/ztk-adaptor/lib64/: adaptor-1.0-r0.aarch64.rpm  adaptor-dev-1.0-r0.aarch64.rpm
src/apps/aud-base/main/: CMakeLists.txt  appmainprog.c
src/apps/aud-base/main/acfg/: CMakeLists.txt  acfg.c  acfg.h  acfg_cli.c  acfg_flash.c  acfg_grp_bluetooth.c  acfg_grp_network.c  acfg_grp_system.c
src/apps/aud-base/main/am/: CMakeLists.txt  am.c  am.h  am_cli.c  am_cli.h
src/apps/aud-base/main/assistant_stub/: CMakeLists.txt  assistant_stub_app.c  assistant_stub_app.h  assistant_stub_app_cli.c  assistant_stub_app_cli.h  assistant_stub_app_json_recv.c  assistant_stub_app_json_recv.h  assistant_stub_app_tts_recv.c  assistant_stub_app_tts_recv.h  mtk_crypto_api_user.h
src/apps/aud-base/main/ble/: CMakeLists.txt  ble.c  ble_gatt.c  ble_msg.c
src/apps/aud-base/main/bluetooth/: CMakeLists.txt  bluetooth_audio.c  bluetooth_audio.h  bluetooth_audio_a2dp.c  bluetooth_audio_a2dp.h  bluetooth_audio_avrcp.c  bluetooth_audio_avrcp.h  bluetooth_audio_cli.c  bluetooth_audio_gap.c  bluetooth_audio_gap.h  bluetooth_audio_key_proc.c  bluetooth_audio_key_proc.h  bluetooth_audio_proc.c  bluetooth_audio_proc.h
src/apps/aud-base/main/bluetooth_hfp/: CMakeLists.txt  bluetooth_hfp.c  bluetooth_hfp.h  bluetooth_hfp_cli.c  bluetooth_hfp_proc.c  bluetooth_hfp_proc.h
src/apps/aud-base/main/button_sound/: CMakeLists.txt  button_sound.c  button_sound.h  button_sound_cli.c  button_sound_cli.h
src/apps/aud-base/main/cli/: _cli.h  cli_cmd.c  cli_input.c  cli_parser.c
src/apps/aud-base/main/device_mngr/: CMakeLists.txt  dm.c  dm.h  dm_cli.c  dm_cli.h  dm_linux.c  dm_linux.h  dmh.c  dmh.h  dmh_netlink.c  dmhlib.c  dmhlib.h  u_fm_linux.c
src/apps/aud-base/main/hellotest/: hellotest.c  hellotest.h  hellotest_cli.c  hellotest_cli.h
src/apps/aud-base/main/inc/: NvRAMUtils.h  c_net_config.h  common.h  fl3236_led.h  led.h  request.h  smt_api.h  u_8516.h  u_acfg.h  u_aee.h  u_aispeech_app.h  u_aispeech_manager.h  u_am.h  u_amb.h  u_app_def.h  u_app_priority.h  u_app_thread.h  u_appman.h  u_assert.h  u_assistant_stub.h  u_bluetooth_audio.h  u_button_sound.h  u_c4a_stub.h  u_cli.h  u_common.h  u_dbg.h  u_dhcpc_api.h  u_dm.h  u_fm.h  u_fw_version.h  u_gpio.h  u_handle.h  u_http_firmware_upgrade.h  u_ipcd.h  u_key_def.h  u_lnk_list.h  u_mic_in.h  u_misc.h  u_net_common.h  u_net_drv_if.h  (+25 more)
src/apps/aud-base/main/led/: CMakeLists.txt  fl3236_led.c  led.c
src/apps/aud-base/main/misc/: CMakeLists.txt  misc.c  misc.h  misc_cli.c  misc_dhcp.c
src/apps/aud-base/main/mw/: CMakeLists.txt  handle.c
src/apps/aud-base/main/playback/: CMakeLists.txt  playback_dlna.c  playback_dlna.h  playback_dlna_cli.c  playback_dlna_cli.h  playback_line_in.c  playback_line_in.h  playback_line_in_cli.c  playback_line_in_cli.h  playback_mic_in.c  playback_mic_in.h  playback_mic_in_cli.c  playback_mic_in_cli.h  playback_prompt.c  playback_prompt.h  playback_prompt_cli.c  playback_prompt_cli.h  playback_tdm_in.c  playback_tdm_in.h  playback_tdm_in_cli.c  playback_tdm_in_cli.h  playback_tts.c  playback_tts.h  playback_tts_cli.c  playback_tts_cli.h  playback_uri.cpp  playback_uri.h  playback_uri_cli.cpp  playback_uri_cli.h  playback_usb.c  playback_usb.h  playback_usb_cli.c  playback_usb_cli.h
src/apps/aud-base/main/state_mngr/: CMakeLists.txt  sm.c  sm.h  sm_cli.c  sm_cli.h
src/apps/aud-base/main/timerd/: _timer.c  timerd.c  timerd.h  timerd_cli.c  timerd_cli.h
src/apps/aud-base/main/upg/: CMakeLists.txt  upg.c  upg.h  upg_cli.c  upg_cli.h
src/apps/aud-base/main/upg_control/: CMakeLists.txt
src/apps/aud-base/main/upgrade_app/: Makefile
src/apps/aud-base/main/user_interface/: CMakeLists.txt  user_interface.c  user_interface.h  user_interface_cli.c  user_interface_cli.h  user_interface_gpio.c  user_interface_key.c  user_interface_key.h
src/apps/aud-base/main/utils/: CMakeLists.txt
src/apps/aud-base/main/wifi_setting/: CMakeLists.txt  wifi_setting.c  wifi_setting.h  wifi_setting_cli.c  wifi_setting_proc.c
src/cloud/custom/: CMakeLists.txt
src/cloud/custom/led/: fl3236_led.c  led_app.c
src/cloud/custom/led/inc/: common.h  fl3236_led.h  led_app.h
src/cloud/dueros/: CMakeLists.txt
src/cloud/dueros/DCSApp/src/: ApplicationManager.cpp  CMakeLists.txt  Configuration.cpp  DCSApplication.cpp  DeviceIoWrapper.cpp  DuerLinkMtkInstance.cpp  DuerLinkWrapper.cpp  MpcRecorder.cpp  PortAudioMicrophoneWrapper.cpp  SoundController.cpp  main.cpp
src/cloud/dueros/Framework/: CMakeLists.txt
src/cloud/dueros/appresources/: CMakeLists.txt
src/cloud/dueros/conf/: asound.conf  dueros_config.json
src/cloud/dueros/doc_cn/: developer_manual.md
src/cloud/dueros/doc_cn/html/: ApplicationImplementation_8h_source.html  AttachmentReader_8h_source.html  ConnectionStatusObserverInterface_8h_source.html  DcsSdkParameters_8h_source.html  DcsSdk_8h_source.html  DialogUXStateObserverInterface_8h_source.html  ErrorTypes_8h_source.html  KeyWordObserverInterface_8h_source.html  LocalMediaPlayerInterface_8h_source.html  LocalSourcePlayerInterface_8h_source.html  (+17 more)
src/cloud/dueros/resources/: config.json  runtime.json
src/cloud/dueros/sdk/: log.config
src/cloud/dueros/service/: dueros.service  dueros.sh  generator_device_id.sh
src/cloud/ztk-adaptor/: CMakeLists.txt  adaptor.c  adaptor_cbk.h  adaptor_log.h  bt_app.c  key_app.c  ntp_app.c  types.h  wifi_app.c
src/cloud/ztk-adaptor/app_ctrl/: CMakeLists.txt  app_ctrl.c  app_ctrl.h  app_ctrl_cli.c
src/cloud/ztk-adaptor/ble_svr/: CMakeLists.txt  bt_msg.c  bt_msg.h  gap_handler.c  gap_handler.h  gatt_handler.c  gatt_handler.h  gattc_handler.c  gattc_handler.h  gatts_handler.c  gatts_handler.h
src/cloud/ztk-adaptor/inc/: adaptor.h  bt_app.h  key_app.h  led_app.h  ntp_app.h  wifi_app.h
(+1676 files in other folders)
