cmake_minimum_required(VERSION 3.1 FATAL_ERROR)

# Set project information
PROJECT(Adaptor)

IF(${CONSYS_WIFI_CHIP} MATCHES 1)
	message("mt6627 is defined")
	ADD_DEFINITIONS(-DCONSYS_WIFI_CHIP=1)
ENDIF()
IF(${WIFI_CHIP_6630} MATCHES 1)
	message("mt6630 is defined")
	ADD_DEFINITIONS(-DWIFI_CHIP_6630=1)
ENDIF()
IF(${WIFI_CHIP_7668} MATCHES 1)
	message("mt7668 is defined")
	ADD_DEFINITIONS(-DWIFI_CHIP_7668=1)
ENDIF()
IF(${DLNA_SUPPORT} MATCHES 1)
	message("dlna is defined")
	ADD_DEFINITIONS(-DDLNA_SUPPORT=1)
ENDIF()
IF(${MT8516_SOM} MATCHES 1)
	message("mt8516-som is defined")
	ADD_DEFINITIONS(-DMT8516_SOM=1)
ENDIF()

IF(${NO_BLUEDROID} MATCHES 0)
	message("bluetooth and HFP APP are built in NO_BLUEDROID:${NO_BLUEDROID}")
	ADD_DEFINITIONS(-DBT_AND_HFP_SUPPORT=1)
ELSE()
	message("neither bluetooth nor HFP APP is built in NO_BLUEDROID:${NO_BLUEDROID}")
ENDIF()

ADD_DEFINITIONS(-DCLI_SUPPORT=1 -DHAVE_CONFIG_H -DCONFIG_ADAPTOR_APP_CTRL)
ADD_COMPILE_OPTIONS(-g -Wall -Os -w -funwind-tables -fPIC -s)
SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_C_FLAGS}")

message("=============================================")
message("BT_MW_INCLUDE_DIR=${BT_MW_INCLUDE_DIR}")
message("WIFI_MW_INCLUDE_DIR=${WIFI_MW_INCLUDE_DIR}")
message("APPMAINPROG_SOURCE=${APPMAINPROG_SOURCE}")
message("=============================================")

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(inc)
INCLUDE_DIRECTORIES(ble_svr)
INCLUDE_DIRECTORIES(app_ctrl)
INCLUDE_DIRECTORIES(${BT_MW_INCLUDE_DIR}/inc_rpc)
INCLUDE_DIRECTORIES(${BT_MW_INCLUDE_DIR}/inc)
INCLUDE_DIRECTORIES(${BT_MW_INCLUDE_DIR}/inc/config)
INCLUDE_DIRECTORIES(${BT_MW_INCLUDE_DIR}/playback/ALSA)
INCLUDE_DIRECTORIES(${WIFI_MW_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${APPMAINPROG_SOURCE}/inc)
INCLUDE_DIRECTORIES(${APPMAINPROG_SOURCE}/utils/inc)

INCLUDE_DIRECTORIES(${APPMAINPROG_SOURCE}/wifi_setting)
INCLUDE_DIRECTORIES(${ADAPTOR_APP_CTRL_SOURCE}/wifi_setting)

INCLUDE_DIRECTORIES(${APPMAINPROG_SOURCE}/user_interface)
INCLUDE_DIRECTORIES(${ADAPTOR_APP_CTRL_SOURCE}/key_press)

INCLUDE_DIRECTORIES(${APPMAINPROG_SOURCE}/misc)
INCLUDE_DIRECTORIES(${ADAPTOR_APP_CTRL_SOURCE}/misc)

#INCLUDE_DIRECTORIES(${APPMAINPROG_SOURCE}/led)
#INCLUDE_DIRECTORIES(${ADAPTOR_APP_CTRL_SOURCE}/led)

INCLUDE_DIRECTORIES(${APPMAINPROG_SOURCE}/../library/bluetooth_hfp_dec)
INCLUDE_DIRECTORIES(${APPMAINPROG_SOURCE}/../library/webrtc_aec)
INCLUDE_DIRECTORIES(${APPMAINPROG_SOURCE}/../../../multimedia/smartaudioplayer/include)

AUX_SOURCE_DIRECTORY(. SOURCE)
ADD_SUBDIRECTORY(ble_svr)
ADD_SUBDIRECTORY(app_ctrl)
ADD_SUBDIRECTORY(${APPMAINPROG_SOURCE}/am am)
ADD_SUBDIRECTORY(${APPMAINPROG_SOURCE}/mw mw)
ADD_SUBDIRECTORY(${APPMAINPROG_SOURCE}/cli cli)

ADD_SUBDIRECTORY(${APPMAINPROG_SOURCE}/utils utils)
ADD_SUBDIRECTORY(${APPMAINPROG_SOURCE}/misc misc)
ADD_SUBDIRECTORY(${APPMAINPROG_SOURCE}/upg upg)
ADD_SUBDIRECTORY(${APPMAINPROG_SOURCE}/user_interface user_interfacce)
ADD_SUBDIRECTORY(${APPMAINPROG_SOURCE}/device_mngr device_mngr)
#ADD_SUBDIRECTORY(${APPMAINPROG_SOURCE}/led led)
ADD_SUBDIRECTORY(${APPMAINPROG_SOURCE}/upg_control upg_control)
ADD_SUBDIRECTORY(${APPMAINPROG_SOURCE}/timerd timerd)
ADD_SUBDIRECTORY(${APPMAINPROG_SOURCE}/wifi_setting wifi_setting)

ADD_LIBRARY(${ADAPTOR_SHARED_LIB} SHARED ${SOURCE})

TARGET_LINK_LIBRARIES(${ADAPTOR_SHARED_LIB} am mw cli)
TARGET_LINK_LIBRARIES(${ADAPTOR_SHARED_LIB} app_ctrl ble_svr misc upg upg_control user_interface device_mngr utils timerd wifi_setting mas2)


INSTALL(TARGETS ${ADAPTOR_SHARED_LIB} DESTINATION ${CMAKE_INSTALL_LIBDIR})

FILE(GLOB adaptor_h_file "inc/*.h")
INSTALL(FILES ${adaptor_h_file} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/adaptor")