ADD_SUBDIRECTORY(alsa)

INCLUDE_DIRECTORIES(../inc)
INCLUDE_DIRECTORIES(inc)

AUX_SOURCE_DIRECTORY(control CONTROL)
AUX_SOURCE_DIRECTORY(datalist DATALIST)
AUX_SOURCE_DIRECTORY(ringbuf RINGBUF)
AUX_SOURCE_DIRECTORY(wav_parser WAV_PARSER)
AUX_SOURCE_DIRECTORY(wifi WIFI)

ADD_LIBRARY(utils ${CONTROL} ${DATALIST} ${RINGBUF} ${WAV_PARSER} ${WIFI})
TARGET_LINK_LIBRARIES(utils alsa cjson)
